--- a/src/components/apex/apex.html
+++ b/src/components/apex/apex.html
@@ -4,13 +4,13 @@
         <h2>Anonymous Apex</h2>
         <button-icon class="apex-history-btn" data-icon="clock" title="History & Favorites"></button-icon>
         <modal-popup class="apex-history-modal">
-            <div class="apex-dropdown-tabs">
-                <button class="apex-dropdown-tab active" data-tab="history">History</button>
-                <button class="apex-dropdown-tab" data-tab="favorites">Favorites</button>
+            <div class="dropdown-tabs">
+                <button class="dropdown-tab active" data-tab="history">History</button>
+                <button class="dropdown-tab" data-tab="favorites">Favorites</button>
             </div>
-            <div class="apex-dropdown-content">
-                <div class="apex-script-list apex-history-list"></div>
-                <div class="apex-script-list apex-favorites-list" style="display: none;"></div>
+            <div class="dropdown-content">
+                <div class="script-list apex-history-list"></div>
+                <div class="script-list apex-favorites-list" style="display: none;"></div>
             </div>
         </modal-popup>
     </div>
@@ -29,7 +29,7 @@
         <div class="card-header-icon" style="background-color: #3ba755;">L</div>
         <h2>Debug Log</h2>
         <div class="apex-output-search">
-            <input type="text" class="apex-search-input" placeholder="Filter...">
+            <input type="text" class="search-input" placeholder="Filter...">
         </div>
     </div>
     <div class="card-body">
