--- a/src/components/utils-tools/flow-cleanup.html
+++ b/src/components/utils-tools/flow-cleanup.html
@@ -11,7 +11,7 @@
             <button class="button-brand delete-versions-btn" disabled>Delete Inactive Versions</button>
         </div>
         <div class="tool-status hidden">
-            <span class="tool-status-indicator"></span>
+            <span class="status-indicator"></span>
             <span class="tool-status-text"></span>
         </div>
     </div>
